--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools" >
 
     <uses-sdk />
 
@@ -33,7 +33,17 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplication"
-        tools:targetApi="31">
+        tools:targetApi="31" >
+        <activity
+            android:name=".ServerActivity"
+            android:exported="false"
+            android:label="@string/title_activity_server"
+            android:theme="@style/Theme.MyApplication" />
+        <activity
+            android:name=".ClientActivity"
+            android:exported="false"
+            android:label="@string/title_activity_client"
+            android:theme="@style/Theme.MyApplication" />
 
         <service
             android:name=".WifiDirectService"
@@ -49,7 +59,7 @@
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.MyApplication">
+            android:theme="@style/Theme.MyApplication" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
